# STC

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_tarballs.jl
.github/workflows/: ci.yml  docs.yml  release.yml
cli/: cli.cpp  cli_utils.h
examples/: julia_quat.jl  sdf_disk.jl
include/: Test.h  base.h  meta.h.in
include/api/: config.h  pkg.h  transpiler.h
include/ast/: context.h
include/backends/glsl/: code_gen.h  glsl_context.h  types.h
include/common/: config.h  src_info.h  term_utils.h  utils.h
include/frontend/jl/: ast.h  ast_utils.h  dumper.h  lowering.h  parser.h  scope.h  sema.h  sym_res.h
include/frontend/jl/node_defs/: expr.def
include/frontend/jl/rt/: module_cache.h  sym_cache.h  utils.h
include/ir/: ast.h  ast_context.h  ast_dumper.h  ast_visitor.h  type_descriptors.h  type_pool.h  types.h
include/ir/node_defs/: expr.def  stmt.def
include/sir/: ast.h  dumper.h
include/sir/node_defs/: expr.def
include/types/: type_descriptors.h  type_pool.h
sandbox/: run_main.cpp  sb_full.cpp  sb_jl_lower.cpp
scripts/: build_all.ps1  pre-commit
src/: Test.cpp
src/api/: config.cpp  pkg.cpp  transpiler.cpp
src/backend/glsl/: code_gen.cpp
src/backends/glsl/: code_gen.cpp  types.cpp
src/common/: src_info.cpp  utils.cpp
src/frontend/jl/: context.cpp  dumper.cpp  lowering.cpp  parser.cpp  scope.cpp  sema.cpp  sym_res.cpp
src/frontend/jl/rt/: module_cache.cpp
src/ir/: ast_dumper.cpp  type_descriptors.cpp  type_pool.cpp  types.cpp
src/sir/: dumper.cpp  sema.cpp
src/types/: type_pool.cpp  type_to_string.cpp
test/: ast.cpp  bump_arena.cpp  symbol_pool.cpp  test.cpp  types.cpp
